# SupaTermX

./: Cargo.toml  README.md
src/: main.rs
src/ai/: mod.rs
src/scaffold/: mod.rs
src/session/: mod.rs
src/terminal/: mod.rs
src/tui/: mod.rs
src/utils/: config.rs  error.rs  format.rs  fs.rs  mod.rs  term.rs  test.rs
